package com.abstract_factory.interfaces;

/**
 * 13/set/2022
 * @author andre
 */
public interface XMLParser {
  public String parse();
}
